Adjust map width to avoid overflow on mobiles.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,7 +325,7 @@ small {
 }
 
 iframe {
-  width: 98.4vw;
+  width: 95vw;
   height: 50vh;
   margin: auto;
 }
@@ -381,6 +381,9 @@ iframe {
     width: 90%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
+  }
+  iframe {
+    width: 98vw;
   }
 }
 
